@@ -596,3 +596,6 @@ Week of Feb 22, 2007 - BZ enhancement request 291 Gamma 2d deluxe
                  spectrum.
 Week of Feb 26, 2007 - BZ 292?  Ensure that tk app name is unique
                 so multiple tkcons will open.
+               - Fix inadvertent leaving of Gamma 2d as Ulong_t not
+                 UInt_t and same for gamma deluxe, for 3.1 , Gamma 2dL
+                 was already correct.
